--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ const metrics = [
 
     // New: Sigh sound URL
     const sighSoundUrl = 'https://freesound.org/data/previews/411/411022_7358205-lq.mp3'; // Disappointed/bored sigh (soft, frustrated)
-    const yaySoundUrl = 'https://freesound.org/data/previews/162/162395_2898467-lq.mp3'; // Cheerful group "Yay!" (2s)
+    const yaySoundUrl = 'https://www.soundjay.com/misc/sounds/cheer-1.mp3'; // Cheery "Yay!" cheer (MP3, crowd excitement)
         
     // --- NEW: BOOT SEQUENCE CONFIG ---
     const BOOT_LOG_LINES = [
