--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </div>
     </div>
 
-    <div <div id="mainWrapper" class="max-w-7xl mx-auto hidden">
+    <div id="mainWrapper" class="max-w-7xl mx-auto hidden">
 
         <div id="mainPage" class="page-content active">
 
