--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     <div id="top50Results" class="hidden">
                         <h3 class="text-lg font-bold text-green-600 mb-3"> 🥇 Top 5 Global Sites</h3>
                         <div id="top50TopList" class="space-y-2 mb-6"></div>
-                        <h3 class="text-lg font-bold text-red-600 mb-3"> ⭐️ Participation Award</h3>
+                        <h3 class="text-lg font-bold text-red-600 mb-3"> ⭐️ Award for Joining In Anyway</h3>
                         <div id="top50BottomList" class="space-y-2"></div>
                     </div>
                 </div>
