--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@ const METRICS = [
         { category: 'Tech', name1: 'Anthropic', url1: 'https://www.anthropic.com', name2: 'xAI', url2: 'https://x.ai' },
         { category: 'Automotive', name1: 'McLaren', url1: 'https://www.mclaren.com', name2: 'Red Bull Racing', url2: 'https://www.redbullracing.com' },
         { category: 'Automotive', name1: 'Ferrari', url1: 'https://www.ferrari.com', name2: 'Porsche', url2: 'https://www.porsche.com' },
-        { category: 'Socials', name1: 'X', url1: 'https://www.x.com', name2: 'Threads', url2: 'https://www.threads.net' },
+        { category: 'Socials', name1: 'X', url1: 'https://x.com', name2: 'Threads', url2: 'https://www.threads.net' },
         { category: 'Socials', name1: 'TikTok', url1: 'https://www.tiktok.com', name2: 'YouTube', url2: 'https://www.youtube.com' },
         { category: 'Socials', name1: 'LinkedIn', url1: 'https://www.linkedin.com', name2: 'BlueSky', url2: 'https://bsky.app' },
         { category: 'Socials', name1: 'WhatsApp', url1: 'https://www.whatsapp.com', name2: 'Telegram', url2: 'https://telegram.org' },
