--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </div>
     </div>
 
-    <div id="mainWrapper" class="max-w-7xl mx-auto hidden">
+    <div id="mainWrapper" class="max-w-7xl mx-auto">
         
         <div id="mainPage" class="page-content active">
 
