--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
         }
         
     </style>
+    </style>
 </head>
 <body class="bg-gradient-to-br from-indigo-50 via-purple-50 to-pink-50 min-h-screen p-4 md:p-8 retro">
 
@@ -1632,9 +1633,12 @@ function downloadBadgeAsImage(element) {
   });
 }
 
-    // === INITIALIZE ===
-    // Functions are called in DOMContentLoaded event listener
+    // === INITIALIZE (Original) ===
+    // updateLeaderboardDisplay(); // Moved to initializePage
+    // renderRivalries(); // Moved to initializePage
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
 </body>
 </html>
