--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
                     <img id="oracleImage" src="pythia-oracle.png" alt="PythiaTM Oracle" class="w-40 h-40" style="display:block; image-rendering: pixelated;">
                     
                     <div class="flex-1 flex justify-start">
-                        <h1 class="text-6xl font-bold bg-gradient-to-r from-indigo-600 to-purple-600 bg-clip-text text-transparent mb-4">
-                            Pythia<sup>&trade;</sup> 
+                        <h1 class="text-6xl font-bold bg-gradient-to-r from-indigo-600 to-purple-600 bg-clip-text text-transparent mb-4 mb-4">
+                            Pythia<sup>TM</sup> 
                         </h1>
                     </div>
                 </div>
