--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
         /* Add space below logo in boring mode */
         body:not(.retro) h1 {
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
         }
         
     </style>
@@ -310,7 +310,7 @@
                     
                     <div class="flex-1 flex justify-start">
                         <h1 class="text-6xl font-bold bg-gradient-to-r from-indigo-600 to-purple-600 bg-clip-text text-transparent mb-4">
-                            Pythia<sup>TM</sup> 
+                            Pythia <sup>™</sup>
                         </h1>
                     </div>
                 </div>
