--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                     <p class="text-gray-700 leading-relaxed mb-4">
                         Pythia<sup>TM</sup> analyzes 10 distinct aspects of your website—from lightning-fast loading times to privacy practices—and intelligently weighs them based on what matters most to modern users and search engines. </p>
                     <div class="bg-indigo-50 p-6 rounded-lg my-6">
-                        <h3 class="text-xl font-bold text-indigo-600 mb-3">Weighting Philosophy</h3>
+                        <h3 class="text-xl font-bold text-gray-700 mb-3">Weighting Philosophy</h3>
                         <p class="weighting-philosophy text-gray-700 mb-2">The P-Score intelligently balances multiple factors:</p>
                         <ul class="weighting-philosophy list-disc ml-6 text-gray-700 space-y-1">
                             <li><strong>Performance</strong> - Speed and responsiveness</li>
@@ -612,10 +612,9 @@
 </div>
                 </div>
                 <div class="mt-8 p-6 bg-indigo-50 rounded-lg">
-                    <h3 class="text-lg font-bold text-indigo-600 mb-2">Methodology Note</h3>
+                    <h3 class="text-lg font-bold text-gray-700 mb-2">Methodology Note</h3>
                     <p class="text-sm text-gray-700">
-                        Each component uses a combination of live API calls (PageSpeed Insights, Green Web Foundation) and proprietary heuristics analyzing HTML structure, headers, and resource loading.
-                        The algorithm is continuously refined based on industry best practices.
+                        Each component is scored using a combination of proprietary heuristics analyzing HTML structure, HTTP headers, resource loading, and data from live API calls (e.g., Green Web Foundation for hosting status). The Pythia algorithm is continuously refined based on modern web industry best practices.
                     </p>
                 </div>
             </div>
@@ -624,7 +623,7 @@
         <div id="customPage" class="page-content">
             <button onclick="showPage('main')" class="back-button mb-4 px-4 py-2 bg-gray-200 rounded-lg hover:bg-gray-300">← Back</button>
             <div class="modern-card bg-white rounded-2xl shadow-xl p-8">
-                <h1 class="text-4xl font-bold text-indigo-600 mb-6"> 💎 Custom Scans (Premium)</h1>
+                <h1 class="text-4xl font-bold text-indigo-600 mb-6"> 💎 Custom Scans (Premium - Coming Soon!)</h1>
                 <div class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white p-8 rounded-lg mb-8">
                     <h2 class="text-3xl font-bold mb-4">Unlock Unlimited Analysis</h2>
                     <p class="text-lg mb-6">Get detailed breakdowns, unlimited scans, and export capabilities for serious website optimization.</p>
@@ -633,10 +632,10 @@
                 </div>
                 <div class="grid md:grid-cols-2 gap-6 mb-8">
                     <div class="p-6 border-2 border-gray-200 rounded-lg"> <h3 class="text-xl font-bold text-gray-800 mb-4">Free Plan</h3> <ul class="space-y-2 text-gray-700"> <li> ✓ Basic P-Score analysis</li> <li> ✓ 10 component scores</li> <li> ✓ Rivalry battles</li> <li> ✓ Top 50 rankings</li> <li> ✗ Detailed breakdowns</li> <li> ✗ Unlimited scans</li> <li> ✗ Export data</li> <li> ✗ Historical tracking</li> </ul> </div>
-                    <div class="p-6 border-4 border-indigo-500 rounded-lg bg-indigo-50"> <div class="flex items-center gap-2 mb-4"> <h3 class="text-xl font-bold text-indigo-600">Premium Plan</h3> <span class="px-3 py-1 bg-indigo-600 text-white text-xs font-bold rounded-full">RECOMMENDED</span> </div> <ul class="space-y-2 text-gray-700"> <li> ✓ Everything in Free</li> <li> ✓ <strong>Unlimited website scans</strong></li> <li> ✓ <strong>Detailed metric breakdowns</strong></li> <li> ✓ <strong>Export to JSON/CSV</strong></li> <li> ✓ <strong>Historical score tracking</strong></li> <li> ✓ <strong>Batch comparisons</strong></li> <li> ✓ <strong>Priority support</strong></li> <li> ✓ <strong>API access (coming soon)</strong></li> </ul> </div>
+                    <div class="p-6 border-4 border-indigo-500 rounded-lg bg-indigo-50"> <div class="flex items-center gap-2 mb-4"> <h3 class="text-xl font-bold text-gray-700">Premium Plan</h3> <span class="px-3 py-1 bg-indigo-600 text-white text-xs font-bold rounded-full">RECOMMENDED</span> </div> <ul class="space-y-2 text-gray-700"> <li> ✓ Everything in Free</li> <li> ✓ <strong>Unlimited website scans</strong></li> <li> ✓ <strong>Detailed metric breakdowns</strong></li> <li> ✓ <strong>Export to JSON/CSV</strong></li> <li> ✓ <strong>Historical score tracking</strong></li> <li> ✓ <strong>Batch comparisons</strong></li> <li> ✓ <strong>Priority support</strong></li> <li> ✓ <strong>API access (coming soon)</strong></li> </ul> </div>
                 </div>
-                <div class="text-center"> <button class="px-8 py-4 bg-gradient-to-r from-indigo-600 to-purple-600 text-white text-xl font-bold rounded-xl hover:from-indigo-700 hover:to-purple-700 transition transform hover:scale-105 shadow-lg"> 🚀 Subscribe Now - $5/month </button> <p class="text-sm text-gray-500 mt-4">Secure payment via Stripe • Instant activation</p> </div>
-                <div class="mt-8 p-6 bg-yellow-50 border-2 border-yellow-400 rounded-lg"> <h3 class="text-lg font-bold text-yellow-800 mb-2"> 🎯 Perfect For:</h3> <ul class="text-gray-700 space-y-1"> <li>• <strong>Agencies</strong> managing multiple client websites</li> <li>• <strong>Developers</strong> optimizing performance before launch</li> <li>• <strong>Marketing teams</strong> tracking competitor sites</li> <li>• <strong>Site owners</strong> committed to continuous improvement</li> </ul> </div>
+                <div class="text-center"> <button class="px-8 py-4 bg-gradient-to-r from-indigo-600 to-purple-600 text-white text-xl font-bold rounded-xl hover:from-indigo-700 hover:to-purple-700 transition transform hover:scale-105 shadow-lg"> 🚀 Coming Soon - $5/month Subscription </button> <p class="text-sm text-gray-500 mt-4">Secure payment via Stripe • Instant activation</p> </div>
+                <div class="mt-8 p-6 bg-yellow-50 border-2 border-yellow-400 rounded-lg"> <h3 class="text-lg font-bold text-gray-700 mb-2"> 🎯 Perfect For:</h3> <ul class="text-gray-700 space-y-1"> <li>• <strong>Agencies</strong> managing multiple client websites</li> <li>• <strong>Developers</strong> optimizing performance before launch</li> <li>• <strong>Marketing teams</strong> tracking competitor sites</li> <li>• <strong>Site owners</strong> committed to continuous improvement</li> </ul> </div>
             </div>
         </div>
 
@@ -646,7 +645,7 @@
                 <h1 class="text-4xl font-bold text-indigo-600 mb-6"> ℹ️ About Pythia<sup>TM</sup></h1> <div class="prose max-w-none about-content">
                     <h2 class="text-2xl font-bold text-gray-800 mb-3">The Oracle of Web Performance</h2>
                     <p class="text-gray-700 leading-relaxed mb-4">
-                        Named after the legendary Oracle of Delphi, Pythia<sup>TM</sup> brings ancient wisdom to modern web analysis. We believe websites should be fast, accessible, private, and sustainable—not just profitable.
+                        Named after the legendary Oracle of Delphi, Pythia<sup>TM</sup> brings ancient wisdom to modern web analysis. We believe websites should be fast, accessible, private, and sustainable, not just profitable.
                     </p>
                     <h2 class="text-2xl font-bold text-gray-800 mt-6 mb-3">Our Mission</h2>
                     <p class="text-gray-700 leading-relaxed mb-4">
@@ -655,30 +654,30 @@
                     </p>
                     <h2 class="text-2xl font-bold text-gray-800 mt-6 mb-3">How We're Different</h2>
                     <ul class="list-disc ml-6 text-gray-700 space-y-2 mb-4">
-                        <li><strong>Holistic Analysis</strong> - 10 metrics, not just speed</li>
+                        <li><strong>Holistic Analysis</strong> - 11 metrics, not just speed</li>
                         <li><strong>Privacy-First</strong> - We penalize trackers, not reward them</li>
                         <li><strong>Sustainability Matters</strong> - Green hosting scores built-in</li>
                         <li><strong>No Vendor Lock-in</strong> - Export your data anytime</li>
                         <li><strong>Transparent Methodology</strong> - Open about what we measure</li>
                     </ul>
                     <div class="bg-indigo-50 p-6 rounded-lg my-6">
-                        <h3 class="text-xl font-bold text-indigo-600 mb-3">A Product of Cronix Holdings</h3>
+                        <h3 class="text-xl font-bold text-gray-700 mb-3">A Product of Cronix Holdings</h3>
                         <p class="text-gray-700 leading-relaxed">
-                            Pythia<sup>TM</sup> is developed and maintained by <strong>Cronix Holdings</strong>, a technology company focused on building tools that make the web better for everyone. We're committed to ethical AI, user privacy, and sustainable technology practices.
+                            Pythia<sup>TM</sup> is developed and maintained by <strong>Cronix Holdings</strong>, a technology company focused on building tools that make tech better for everyone. We're committed to ethical AI, user privacy, and sustainable technology practices.
                         </p>
                     </div>
                     <h2 class="text-2xl font-bold text-gray-800 mt-6 mb-3">Technology Stack</h2>
                     <p class="text-gray-700 leading-relaxed mb-4">
-                        Pythia<sup>TM</sup> is built on Cloudflare Pages with serverless functions, leveraging APIs from Google PageSpeed Insights and the Green Web Foundation. Our caching layer ensures consistent scores while respecting API rate limits.
+                        Pythia<sup>TM</sup> is built on Cloudflare Pages with serverless functions, leveraging APIs from (e.g.) the Green Web Foundation. Our caching layer ensures consistent scores while respecting API rate limits.
                     </p>
                     <h2 class="text-2xl font-bold text-gray-800 mt-6 mb-3">Beta Notice</h2>
                     <p class="text-gray-700 leading-relaxed mb-4">
-                        Pythia<sup>TM</sup> is currently in public beta. We're actively refining our algorithms and adding new features. Your feedback shapes our roadmap—reach out via the menu if you have suggestions!
+                        Pythia<sup>TM</sup> is currently in public beta. Pythia’s P-Score is based on proprietary heuristics and is provided for informational and educational purposes only. P-Score is not a guarantee of website performance, security, or legal compliance. We're actively refining our algorithms and adding new features. Your feedback shapes our roadmap — reach out with suggestions!
                     </p>
                     <div class="mt-8 text-center">
                         <p class="text-sm text-gray-500">
                             Questions? Feedback? Partnership inquiries?<br>
-                            Contact us: <a href="mailto:hello@cronixholdings.com" class="text-indigo-600 font-bold hover:underline">hello@cronixholdings.com</a>
+                            Contact us: <a href="mailto:cronixholdings@gmail.com" class="text-indigo-600 font-bold hover:underline">hello@cronixholdings.com</a>
                         </p>
                     </div>
                 </div>
