--- a/index.html
+++ b/index.html
@@ -499,9 +499,9 @@
                     <p class="text-gray-700 leading-relaxed mb-4">
                         Pythia<sup>TM</sup> analyzes 10 distinct aspects of your website—from lightning-fast loading times to privacy practices—and intelligently weighs them based on what matters most to modern users and search engines. </p>
                     <div class="bg-indigo-50 p-6 rounded-lg my-6">
-                        <h3 class="text-xl font-bold text-gray-700 mb-3">Weighting Philosophy</h3>
-                        <p class="weighting-philosophy text-gray-700 mb-2">The P-Score intelligently balances multiple factors:</p>
-                        <ul class="weighting-philosophy list-disc ml-6 text-gray-700 space-y-1">
+                        <h3 class="text-xl font-bold text-green-600 mb-3">Weighting Philosophy</h3>
+                        <p class="weighting-philosophy text-green-600 mb-2">The P-Score intelligently balances multiple factors:</p>
+                        <ul class="weighting-philosophy list-disc ml-6 text-green-600 space-y-1">
                             <li><strong>Performance</strong> - Speed and responsiveness</li>
                             <li><strong>Accessibility</strong> - Inclusive design for all users</li>
                             <li><strong>Privacy & Security</strong> - User protection</li>
@@ -511,7 +511,7 @@
                             <li><strong>Modern Technology</strong> - Future-readiness</li>
                             <li><strong>And more...</strong></li>
                         </ul>
-                        <p class="text-sm text-gray-600 mt-3 italic">Each factor is weighted according to its impact on user experience and modern web standards.</p>
+                        <p class="text-sm text-green-600 mt-3 italic">Each factor is weighted according to its impact on user experience and modern web standards.</p>
                     </div>
                     <h2 class="text-2xl font-bold text-gray-800 mt-6 mb-3">Score Ranges</h2>
                     <div class="grid md:grid-cols-3 gap-4 my-4">
@@ -521,7 +521,7 @@
                         </div>
                         <div class="p-4 bg-yellow-50 border-2 border-yellow-500 rounded-lg">
                             <div class="text-3xl font-bold text-yellow-600">60-79</div>
-                            <div class="text-sm text-gray-700">Good - Room for optimization</div>
+                            <div class="text-sm text-green-600">Good - Room for optimization</div>
                         </div>
                         <div class="p-4 bg-red-50 border-2 border-red-500 rounded-lg">
                             <div class="text-3xl font-bold text-red-600">0-59</div>
@@ -612,7 +612,7 @@
 </div>
                 </div>
                 <div class="mt-8 p-6 bg-indigo-50 rounded-lg">
-                    <h3 class="text-lg font-bold text-gray-700 mb-2">Methodology Note</h3>
+                    <h3 class="text-lg font-bold text-green-600 mb-2">Methodology Note</h3>
                     <p class="text-sm text-gray-700">
                         Each component is scored using a combination of proprietary heuristics analyzing HTML structure, HTTP headers, resource loading, and data from live API calls (e.g., Green Web Foundation for hosting status). The Pythia algorithm is continuously refined based on modern web industry best practices.
                     </p>
@@ -632,10 +632,10 @@
                 </div>
                 <div class="grid md:grid-cols-2 gap-6 mb-8">
                     <div class="p-6 border-2 border-gray-200 rounded-lg"> <h3 class="text-xl font-bold text-gray-800 mb-4">Free Plan</h3> <ul class="space-y-2 text-gray-700"> <li> ✓ Basic P-Score analysis</li> <li> ✓ 10 component scores</li> <li> ✓ Rivalry battles</li> <li> ✓ Top 50 rankings</li> <li> ✗ Detailed breakdowns</li> <li> ✗ Unlimited scans</li> <li> ✗ Export data</li> <li> ✗ Historical tracking</li> </ul> </div>
-                    <div class="p-6 border-4 border-indigo-500 rounded-lg bg-indigo-50"> <div class="flex items-center gap-2 mb-4"> <h3 class="text-xl font-bold text-gray-700">Premium Plan</h3> <span class="px-3 py-1 bg-indigo-600 text-white text-xs font-bold rounded-full">RECOMMENDED</span> </div> <ul class="space-y-2 text-gray-700"> <li> ✓ Everything in Free</li> <li> ✓ <strong>Unlimited website scans</strong></li> <li> ✓ <strong>Detailed metric breakdowns</strong></li> <li> ✓ <strong>Export to JSON/CSV</strong></li> <li> ✓ <strong>Historical score tracking</strong></li> <li> ✓ <strong>Batch comparisons</strong></li> <li> ✓ <strong>Priority support</strong></li> <li> ✓ <strong>API access (coming soon)</strong></li> </ul> </div>
+                    <div class="p-6 border-4 border-indigo-500 rounded-lg bg-indigo-50"> <div class="flex items-center gap-2 mb-4"> <h3 class="text-xl font-bold text-green-600">Premium Plan</h3> <span class="px-3 py-1 bg-indigo-600 text-white text-xs font-bold rounded-full">RECOMMENDED</span> </div> <ul class="space-y-2 text-green-600"> <li> ✓ Everything in Free</li> <li> ✓ <strong>Unlimited website scans</strong></li> <li> ✓ <strong>Detailed metric breakdowns</strong></li> <li> ✓ <strong>Export to JSON/CSV</strong></li> <li> ✓ <strong>Historical score tracking</strong></li> <li> ✓ <strong>Batch comparisons</strong></li> <li> ✓ <strong>Priority support</strong></li> <li> ✓ <strong>API access (coming soon)</strong></li> </ul> </div>
                 </div>
                 <div class="text-center"> <button class="px-8 py-4 bg-gradient-to-r from-indigo-600 to-purple-600 text-white text-xl font-bold rounded-xl hover:from-indigo-700 hover:to-purple-700 transition transform hover:scale-105 shadow-lg"> 🚀 Coming Soon - $5/month Subscription </button> <p class="text-sm text-gray-500 mt-4">Secure payment via Stripe • Instant activation</p> </div>
-                <div class="mt-8 p-6 bg-yellow-50 border-2 border-yellow-400 rounded-lg"> <h3 class="text-lg font-bold text-gray-700 mb-2"> 🎯 Perfect For:</h3> <ul class="text-gray-700 space-y-1"> <li>• <strong>Agencies</strong> managing multiple client websites</li> <li>• <strong>Developers</strong> optimizing performance before launch</li> <li>• <strong>Marketing teams</strong> tracking competitor sites</li> <li>• <strong>Site owners</strong> committed to continuous improvement</li> </ul> </div>
+                <div class="mt-8 p-6 bg-yellow-50 border-2 border-yellow-400 rounded-lg"> <h3 class="text-lg font-bold text-green-600 mb-2"> 🎯 Perfect For:</h3> <ul class="text-green-600 space-y-1"> <li>• <strong>Agencies</strong> managing multiple client websites</li> <li>• <strong>Developers</strong> optimizing performance before launch</li> <li>• <strong>Marketing teams</strong> tracking competitor sites</li> <li>• <strong>Site owners</strong> committed to continuous improvement</li> </ul> </div>
             </div>
         </div>
 
@@ -661,7 +661,7 @@
                         <li><strong>Transparent Methodology</strong> - Open about what we measure</li>
                     </ul>
                     <div class="bg-indigo-50 p-6 rounded-lg my-6">
-                        <h3 class="text-xl font-bold text-gray-700 mb-3">A Product of Cronix Holdings</h3>
+                        <h3 class="text-xl font-bold text-green-600 mb-3">A Product of Cronix Holdings</h3>
                         <p class="text-gray-700 leading-relaxed">
                             Pythia<sup>TM</sup> is developed and maintained by <strong>Cronix Holdings</strong>, a technology company focused on building tools that make tech better for everyone. We're committed to ethical AI, user privacy, and sustainable technology practices.
                         </p>
