--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ body:not(.retro) #pscoreExplainerPage .text-green-600 {
             
             <div id="compareBlock" class="modern-card bg-white rounded-2xl shadow-xl p-6 mt-8 text-center">
               <h2 id="compareTitle" class="text-2xl md:text-3xl font-bold text-indigo-600 mb-4">
-                IS YOUR URL BETTER THAN X?
+                IS YOUR URL "BETTER THAN X"?
               </h2>
             
               <div class="flex flex-col md:flex-row gap-4 justify-center mb-4">
