--- a/index.html
+++ b/index.html
@@ -670,8 +670,8 @@ body:not(.retro) #pscoreExplainerPage .text-green-600 {
                         <li><strong>No Vendor Lock-in</strong> - Export your data anytime</li>
                         <li><strong>Transparent Methodology</strong> - Open about what we measure</li>
                     </ul>
-                    <div class="bg-indigo-50 p-6 rounded-lg my-6">
-                        <h3 class="text-xl font-bold text-green-800 mb-3">A Product of Cronix Holdings</h3>
+                    <div class="bg-gray-200 p-6 rounded-lg my-6">
+                        <h3 class="text-xl font-bold text-green-800 mb-3">A Product of Cronix Holdings - Making the Internet Fun Again</h3>
                         <p class="text-gray-700 leading-relaxed">
                             Pythia<sup>TM</sup> is developed and maintained by <strong>Cronix Holdings</strong>, a technology company focused on building tools that make tech better for everyone. We're committed to ethical AI, user privacy, and sustainable technology practices.
                         </p>
@@ -687,7 +687,7 @@ body:not(.retro) #pscoreExplainerPage .text-green-600 {
                     <div class="mt-8 text-center">
                         <p class="text-sm text-gray-500">
                             Questions? Feedback? Partnership inquiries?<br>
-                            Contact us: <a href="mailto:cronixholdings@gmail.com" class="text-indigo-600 font-bold hover:underline">hello@cronixholdings.com</a>
+                            Contact us: <a href="mailto:cronixholdings@gmail.com" class="text-indigo-600 font-bold hover:underline">cronixholdings@gmail.com</a>
                         </p>
                     </div>
                 </div>
