--- a/index.html
+++ b/index.html
@@ -671,8 +671,8 @@ body:not(.retro) #pscoreExplainerPage .text-green-600 {
                         <li><strong>Transparent Methodology</strong> - Open about what we measure</li>
                     </ul>
                     <div class="bg-gray-200 p-6 rounded-lg my-6">
-                        <h3 class="text-xl font-bold text-green-800 mb-3">A Product of Cronix Holdings - Making the Internet Fun Again</h3>
-                        <p class="text-gray-700 leading-relaxed">
+                        <h3 class="text-xl font-bold text-block mb-3">A Product of Cronix Holdings - Making the Internet Fun Again</h3>
+                        <p class="text-block leading-relaxed">
                             Pythia<sup>TM</sup> is developed and maintained by <strong>Cronix Holdings</strong>, a technology company focused on building tools that make tech better for everyone. We're committed to ethical AI, user privacy, and sustainable technology practices.
                         </p>
                     </div>
