--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
                     </ul>
                     <div class="bg-gray-200 p-6 rounded-lg my-6">
                         <h3 class="text-xl font-bold text-block mb-3">A Product of Cronix Holdings - Making the Internet Fun Again</h3>
-                        <p class="text-block leading-relaxed">
+                        <p class="text-xl font-bold text-block mb-3">
                             Pythia<sup>TM</sup> is developed and maintained by <strong>Cronix Holdings</strong>, a technology company focused on building tools that make tech better for everyone. We're committed to ethical AI, user privacy, and sustainable technology practices.
                         </p>
                     </div>
