--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
                     </p>
                     <h2 class="text-2xl font-bold text-gray-800 mt-6 mb-3">How It Works</h2>
                     <p class="text-gray-700 leading-relaxed mb-4">
-                        Pythia<sup>TM</sup> analyzes 10 distinct aspects of your website—from lightning-fast loading times to privacy practices—and intelligently weighs them based on what matters most to modern users and search engines. </p>
-                    <div class="bg-indigo-50 p-6 rounded-lg my-6">
+                        Pythia<sup>TM</sup> analyzes 11 distinct aspects of your website—from lightning-fast loading times to privacy practices—and intelligently weighs them based on what matters most to modern users and search engines. </p>
+                    <div class="bg-gray-200 p-6 rounded-lg my-6">
                         <h3 class="text-xl font-bold text-green-800 mb-3">Weighting Philosophy</h3>
                         <p class="weighting-philosophy text-green-800 mb-2">The P-Score intelligently balances multiple factors:</p>
                         <ul class="weighting-philosophy list-disc ml-6 text-green-800 space-y-1">
@@ -529,7 +529,7 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
                             <div class="text-3xl font-bold text-green-800">80-100</div>
                             <div class="text-sm text-gray-700">Excellent - Top tier performance</div>
                         </div>
-                        <div class="p-4 bg-yellow-50 border-2 border-yellow-500 rounded-lg">
+                        <div class="p-4 bg-gray-200 border-2 border-yellow-500 rounded-lg">
                             <div class="text-3xl font-bold text-yellow-600">60-79</div>
                             <div class="text-sm text-green-800">Good - Room for optimization</div>
                         </div>
@@ -621,7 +621,7 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
     <p class="component-description text-gray-700">Scores the sustainability of the hosting environment by checking if the server is powered by renewable energy, based on a lookup against the Green Web Foundation.</p>
 </div>
                 </div>
-                <div class="mt-8 p-6 bg-indigo-50 rounded-lg">
+                <div class="mt-8 p-6 bg-gray-200 rounded-lg">
                     <h3 class="text-lg font-bold text-green-800 mb-2">Methodology Note</h3>
                     <p class="text-sm text-gray-700">
                         Each component is scored using a combination of proprietary heuristics analyzing HTML structure, HTTP headers, resource loading, and data from live API calls (e.g., Green Web Foundation for hosting status). The Pythia algorithm is continuously refined based on modern web industry best practices.
@@ -632,8 +632,8 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
 
         <div id="customPage" class="page-content">
             <button onclick="showPage('main')" class="back-button mb-4 px-4 py-2 bg-gray-200 rounded-lg hover:bg-gray-300">← Back</button>
-            <div class="modern-card bg-white rounded-2xl shadow-xl p-8">
-                <h1 class="text-4xl font-bold text-indigo-600 mb-6"> 💎 Custom Scans (Premium - Coming Soon!)</h1>
+            <div class="modern-card bg-gray-200 rounded-2xl shadow-xl p-8">
+                <h1 class="text-4xl font-bold text-block mb-6"> 💎 Custom Scans (Premium - Coming Soon!)</h1>
                 <div class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white p-8 rounded-lg mb-8">
                     <h2 class="text-3xl font-bold mb-4">Unlock Unlimited Analysis</h2>
                     <p class="text-lg mb-6">Get detailed breakdowns, unlimited scans, and export capabilities for serious website optimization.</p>
