--- a/index.html
+++ b/index.html
@@ -509,9 +509,9 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
                     <p class="text-gray-700 leading-relaxed mb-4">
                         Pythia<sup>TM</sup> analyzes 11 distinct aspects of your website—from lightning-fast loading times to privacy practices—and intelligently weighs them based on what matters most to modern users and search engines. </p>
                     <div class="bg-gray-200 p-6 rounded-lg my-6">
-                        <h3 class="text-xl font-bold text-green-800 mb-3">Weighting Philosophy</h3>
-                        <p class="weighting-philosophy text-green-800 mb-2">The P-Score intelligently balances multiple factors:</p>
-                        <ul class="weighting-philosophy list-disc ml-6 text-green-800 space-y-1">
+                        <h3 class="text-xl font-bold text-block mb-3">Weighting Philosophy</h3>
+                        <p class="weighting-philosophy text-block mb-2">The P-Score intelligently balances multiple factors:</p>
+                        <ul class="weighting-philosophy list-disc ml-6 text-block space-y-1">
                             <li><strong>Performance</strong> - Speed and responsiveness</li>
                             <li><strong>Accessibility</strong> - Inclusive design for all users</li>
                             <li><strong>Privacy & Security</strong> - User protection</li>
@@ -521,7 +521,7 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
                             <li><strong>Modern Technology</strong> - Future-readiness</li>
                             <li><strong>And more...</strong></li>
                         </ul>
-                        <p class="text-sm text-green-800 mt-3 italic">Each factor is weighted according to its impact on user experience and modern web standards.</p>
+                        <p class="text-sm text-block mt-3 italic">Each factor is weighted according to its impact on user experience and modern web standards.</p>
                     </div>
                     <h2 class="text-2xl font-bold text-gray-800 mt-6 mb-3">Score Ranges</h2>
                     <div class="grid md:grid-cols-3 gap-4 my-4">
@@ -530,8 +530,8 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
                             <div class="text-sm text-gray-700">Excellent - Top tier performance</div>
                         </div>
                         <div class="p-4 bg-gray-200 border-2 border-yellow-500 rounded-lg">
-                            <div class="text-3xl font-bold text-yellow-600">60-79</div>
-                            <div class="text-sm text-green-800">Good - Room for optimization</div>
+                            <div class="text-3xl font-bold text-block">60-79</div>
+                            <div class="text-sm text-block">Good - Room for optimization</div>
                         </div>
                         <div class="p-4 bg-red-50 border-2 border-red-500 rounded-lg">
                             <div class="text-3xl font-bold text-red-600">0-59</div>
@@ -622,8 +622,8 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
 </div>
                 </div>
                 <div class="mt-8 p-6 bg-gray-200 rounded-lg">
-                    <h3 class="text-lg font-bold text-green-800 mb-2">Methodology Note</h3>
-                    <p class="text-sm text-gray-700">
+                    <h3 class="text-lg font-bold text-block mb-2">Methodology Note</h3>
+                    <p class="text-sm text-block">
                         Each component is scored using a combination of proprietary heuristics analyzing HTML structure, HTTP headers, resource loading, and data from live API calls (e.g., Green Web Foundation for hosting status). The Pythia algorithm is continuously refined based on modern web industry best practices.
                     </p>
                 </div>
