--- a/index.html
+++ b/index.html
@@ -510,8 +510,8 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
                         Pythia<sup>TM</sup> analyzes 11 distinct aspects of your website—from lightning-fast loading times to privacy practices—and intelligently weighs them based on what matters most to modern users and search engines. </p>
                     <div class="bg-gray-300 p-6 rounded-lg my-6">
                         <h3 class="text-xl font-bold text-block mb-3">Weighting Philosophy</h3>
-                        <p class="weighting-philosophy text-block mb-2">The P-Score intelligently balances multiple factors:</p>
-                        <ul class="weighting-philosophy list-disc ml-6 text-block space-y-1">
+                        <p class="weighting-philosophy text-xl font-bold text-block mb-2">The P-Score intelligently balances multiple factors:</p>
+                        <ul class="weighting-philosophy list-disc ml-6 text-xl font-bold text-block space-y-1">
                             <li><strong>Performance</strong> - Speed and responsiveness</li>
                             <li><strong>Accessibility</strong> - Inclusive design for all users</li>
                             <li><strong>Privacy & Security</strong> - User protection</li>
@@ -622,8 +622,8 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
 </div>
                 </div>
                 <div class="mt-8 p-6 bg-gray-300 rounded-lg">
-                    <h3 class="text-lg font-bold text-block mb-2">Methodology Note</h3>
-                    <p class="text-sm text-block">
+                    <h3 class="text-xl font-bold text-block mb-2">Methodology Note</h3>
+                    <p class="text-xl font-bold text-block">
                         Each component is scored using a combination of proprietary heuristics analyzing HTML structure, HTTP headers, resource loading, and data from live API calls (e.g., Green Web Foundation for hosting status). The Pythia algorithm is continuously refined based on modern web industry best practices.
                     </p>
                 </div>
