--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
                             <li><strong>Modern Technology</strong> - Future-readiness</li>
                             <li><strong>And more...</strong></li>
                         </ul>
-                        <p class="text-sm text-block mt-3 italic">Each factor is weighted according to its impact on user experience and modern web standards.</p>
+                        <p class="text-sm font-bold text-block mt-3 italic">Each factor is weighted according to its impact on user experience and modern web standards.</p>
                     </div>
                     <h2 class="text-2xl font-bold text-gray-800 mt-6 mb-3">Score Ranges</h2>
                     <div class="grid md:grid-cols-3 gap-4 my-4">
@@ -529,7 +529,7 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
                             <div class="text-3xl font-bold text-green-800">80-100</div>
                             <div class="text-sm text-gray-700">Excellent - Top tier performance</div>
                         </div>
-                        <div class="p-4 bg-gray-200 border-2 border-yellow-500 rounded-lg">
+                        <div class="p-4 bg-gray-800 border-2 border-yellow-500 rounded-lg">
                             <div class="text-3xl font-bold text-block">60-79</div>
                             <div class="text-sm text-block">Good - Room for optimization</div>
                         </div>
@@ -623,7 +623,7 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
                 </div>
                 <div class="mt-8 p-6 bg-gray-300 rounded-lg">
                     <h3 class="text-xl font-bold text-block mb-2">Methodology Note</h3>
-                    <p class="text-xl font-bold text-block">
+                    <p class="font-bold text-block">
                         Each component is scored using a combination of proprietary heuristics analyzing HTML structure, HTTP headers, resource loading, and data from live API calls (e.g., Green Web Foundation for hosting status). The Pythia algorithm is continuously refined based on modern web industry best practices.
                     </p>
                 </div>
