--- a/index.html
+++ b/index.html
@@ -637,14 +637,14 @@ body:not(.retro) #pscoreExplainerPage .text-green-900 {
                 <div class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white p-8 rounded-lg mb-8">
                     <h2 class="text-3xl font-bold mb-4">Unlock Unlimited Analysis</h2>
                     <p class="text-lg mb-6">Get detailed breakdowns, unlimited scans, and export capabilities for serious website optimization.</p>
-                    <div class="text-5xl font-bold mb-2">$5 - $19.99<span class="text-2xl">/month (individual/enterprise)</span></div>
+                    <div class="text-5xl font-bold mb-2">$5<span class="text-2xl">/month (enhanced)</span></div>
                     <p class="opacity-90">Cancel anytime • No hidden fees</p>
                 </div>
                 <div class="grid md:grid-cols-2 gap-6 mb-8">
                     <div class="p-6 border-2 border-gray-200 rounded-lg"> <h3 class="text-xl font-bold text-gray-800 mb-4">Free Plan</h3> <ul class="space-y-2 text-gray-700"> <li> ✓ Basic P-Score analysis</li> <li> ✓ 10 component scores</li> <li> ✓ Rivalry battles</li> <li> ✓ Top 50 rankings</li> <li> ✗ Detailed breakdowns</li> <li> ✗ Unlimited scans</li> <li> ✗ Export data</li> <li> ✗ Historical tracking</li> </ul> </div>
                     <div class="p-6 border-4 border-indigo-500 rounded-lg bg-indigo-50"> <div class="flex items-center gap-2 mb-4"> <h3 class="text-xl font-bold text-green-800">Premium Plan</h3> <span class="px-3 py-1 bg-indigo-600 text-white text-xs font-bold rounded-full">RECOMMENDED</span> </div> <ul class="space-y-2 text-green-800"> <li> ✓ Everything in Free</li> <li> ✓ <strong>Unlimited website scans</strong></li> <li> ✓ <strong>Detailed metric breakdowns</strong></li> <li> ✓ <strong>Export to JSON/CSV</strong></li> <li> ✓ <strong>Historical score tracking</strong></li> <li> ✓ <strong>Batch comparisons</strong></li> <li> ✓ <strong>Tailored insights</strong></li> <li> ✓ <strong>API access (coming soon)</strong></li> </ul> </div>
                 </div>
-                <div class="text-center"> <button class="px-8 py-4 bg-gradient-to-r from-indigo-600 to-purple-600 text-white text-xl font-bold rounded-xl hover:from-indigo-700 hover:to-purple-700 transition transform hover:scale-105 shadow-lg"> 🚀 Coming Soon - $5-$19.99/month Subscriptions </button> <p class="text-sm text-gray-500 mt-4">Secure payment via Stripe • Instant activation</p> </div>
+                <div class="text-center"> <button class="px-8 py-4 bg-gradient-to-r from-indigo-600 to-purple-600 text-white text-xl font-bold rounded-xl hover:from-indigo-700 hover:to-purple-700 transition transform hover:scale-105 shadow-lg"> 🚀 Coming Soon - $5/month Subscriptions </button> <p class="text-sm text-gray-500 mt-4">Secure payment via Stripe • Instant activation</p> </div>
                 <div class="mt-8 p-6 bg-yellow-50 border-2 border-yellow-400 rounded-lg"> <h3 class="text-lg font-bold text-green-800 mb-2"> 🎯 Perfect For:</h3> <ul class="text-green-800 space-y-1"> <li>• <strong>Agencies</strong> managing multiple client websites</li> <li>• <strong>Developers</strong> optimizing performance before launch</li> <li>• <strong>Marketing teams</strong> tracking competitor sites</li> <li>• <strong>Site owners</strong> committed to continuous improvement</li> </ul> </div>
             </div>
         </div>
